--- a/res/layout/activity_main_appbar.xml
+++ b/res/layout/activity_main_appbar.xml
@@ -18,6 +18,45 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="50dp"
+                android:src="@drawable/img_politics"
+                android:id="@+id/imageButton"
+                android:layout_above="@+id/imageButton2"
+                android:layout_toStartOf="@+id/imageButton3"
+                android:onClick="button_politic"
+                android:contentDescription="@string/politic"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="100dp"
+                android:src="@drawable/img_computing"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/imageButton3"
+                android:onClick="button_computing"
+                android:contentDescription="@string/computings"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="150dp"
+                android:src="@drawable/img_chinese"
+                android:id="@+id/imageButton2"
+                android:layout_below="@+id/imageButton3"
+                android:layout_centerHorizontal="true"
+                android:onClick="button_chineses"
+                android:contentDescription="@string/chineses" />
+        </RelativeLayout>
+
+
         <fragment
             android:id="@+id/fragment_navigation_drawer"
             android:name="cheongjun.ngin.definition.NavigationDrawerFragment"
