--- a/res/layout/fragment_navigation_drawer.xml
+++ b/res/layout/fragment_navigation_drawer.xml
@@ -15,9 +15,15 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:fontFamily="sans-serif-medium">
     </android.support.v7.widget.RecyclerView>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/tasks"
+        android:layout_below="@id/drawerList"/>
 
 </RelativeLayout>
 
